auogenerated have files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,27 @@
 *.a
 *.so
 *.sed
+lib/LavaRnd/have/cam_videodev.h
+lib/LavaRnd/have/endian.h
+lib/LavaRnd/have/have_getcontext.h
+lib/LavaRnd/have/have_getdtablesize.h
+lib/LavaRnd/have/have_gethostid.h
+lib/LavaRnd/have/have_getpgrp.h
+lib/LavaRnd/have/have_getppid.h
+lib/LavaRnd/have/have_getprid.h
+lib/LavaRnd/have/have_getpriority.h
+lib/LavaRnd/have/have_getrlimit.h
+lib/LavaRnd/have/have_gettime.h
+lib/LavaRnd/have/have_pselect.h
+lib/LavaRnd/have/have_rusage.h
+lib/LavaRnd/have/have_sbrk.h
+lib/LavaRnd/have/have_statfs.h
+lib/LavaRnd/have/have_sys_resource.h
+lib/LavaRnd/have/have_sys_time.h
+lib/LavaRnd/have/have_sys_times.h
+lib/LavaRnd/have/have_time.h
+lib/LavaRnd/have/have_uid_t.h
+lib/LavaRnd/have/have_ustat.h
+lib/LavaRnd/have/have_ustat_h.h
+lib/LavaRnd/have/ov511_cam.h
+lib/LavaRnd/have/pwc_cam.h
