ignore built items in perllib
{"fundingSource": "34267.1", "team": "FED.OBC", "fshGit": "13dfcf80", "fshDocker": "sha256:a10ea5d3"}

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,53 @@ tool/y2grey
 tool/y2pseudoyuv
 tool/y2yuv
 tool/yuv2ppm
+## Perllib built crap
+perllib/LavaRnd/Exit/Exit.bs
+perllib/LavaRnd/Exit/Exit.c
+perllib/LavaRnd/Exit/MYMETA.json
+perllib/LavaRnd/Exit/MYMETA.yml
+perllib/LavaRnd/Exit/Makefile
+perllib/LavaRnd/Exit/blib/
+perllib/LavaRnd/Exit/pm_to_blib
+perllib/LavaRnd/Retry/MYMETA.json
+perllib/LavaRnd/Retry/MYMETA.yml
+perllib/LavaRnd/Retry/Makefile
+perllib/LavaRnd/Retry/Retry.bs
+perllib/LavaRnd/Retry/Retry.c
+perllib/LavaRnd/Retry/blib/
+perllib/LavaRnd/Retry/pm_to_blib
+perllib/LavaRnd/Return/MYMETA.json
+perllib/LavaRnd/Return/MYMETA.yml
+perllib/LavaRnd/Return/Makefile
+perllib/LavaRnd/Return/Return.bs
+perllib/LavaRnd/Return/Return.c
+perllib/LavaRnd/Return/blib/
+perllib/LavaRnd/Return/pm_to_blib
+perllib/LavaRnd/S100_Any/MYMETA.json
+perllib/LavaRnd/S100_Any/MYMETA.yml
+perllib/LavaRnd/S100_Any/Makefile
+perllib/LavaRnd/S100_Any/S100_Any.bs
+perllib/LavaRnd/S100_Any/S100_Any.c
+perllib/LavaRnd/S100_Any/blib/
+perllib/LavaRnd/S100_Any/pm_to_blib
+perllib/LavaRnd/TryOnce_Any/MYMETA.json
+perllib/LavaRnd/TryOnce_Any/MYMETA.yml
+perllib/LavaRnd/TryOnce_Any/Makefile
+perllib/LavaRnd/TryOnce_Any/TryOnce_Any.bs
+perllib/LavaRnd/TryOnce_Any/TryOnce_Any.c
+perllib/LavaRnd/TryOnce_Any/blib/
+perllib/LavaRnd/TryOnce_Any/pm_to_blib
+perllib/LavaRnd/Try_Any/MYMETA.json
+perllib/LavaRnd/Try_Any/MYMETA.yml
+perllib/LavaRnd/Try_Any/Makefile
+perllib/LavaRnd/Try_Any/Try_Any.bs
+perllib/LavaRnd/Try_Any/Try_Any.c
+perllib/LavaRnd/Try_Any/blib/
+perllib/LavaRnd/Try_Any/pm_to_blib
+perllib/LavaRnd/Util/MYMETA.json
+perllib/LavaRnd/Util/MYMETA.yml
+perllib/LavaRnd/Util/Makefile
+perllib/LavaRnd/Util/Util.bs
+perllib/LavaRnd/Util/Util.c
+perllib/LavaRnd/Util/blib/
+perllib/LavaRnd/Util/pm_to_blib
